Feature/java 17 (#45)
* Upgrading servlet, jaxb and json and setting Java 17

* Upgrading jaxws

* Upgrading mail but also comment out because it is not in use

* Upgrading cfx

* Upgrading spring

* Upgrading jackson

* Upgrading eclipselink

* Rewmoved som warnings

* Setting encoding utf-8

* Upgrading opencsv

* Upgrading apachehttpclient, apache_commons_io, junit

* Upgrading org.json:json

* Trying to remove double jaxb-core

* javax.persistence -> jakarta.persistence

jaxrs -> com.fasterxml.jackson.jakarta.rs.json.JacksonJsonProvider

* Fixed problems with uploading multipart data

long param received as null, using String instead

* Upgrading sqlite